--- a/BattleThemes.Template.csproj
+++ b/BattleThemes.Template.csproj
@@ -17,6 +17,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="submodules\**" />
+    <EmbeddedResource Remove="submodules\**" />
+    <None Remove="submodules\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ReloadedLinkRoots Include="BattleThemes.Template" />
     <!-- Add assemblies to be trimmed. You might need to add their dependencies too!  -->
     <!-- <ReloadedLinkAssemblies Include="Reloaded.Memory" /> -->
@@ -46,5 +52,15 @@
     <PackageReference Include="Reloaded.Mod.Interfaces" Version="2.4.0" ExcludeAssets="runtime" />
     <PackageReference Include="Reloaded.SharedLib.Hooks" Version="1.9.0" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="submodules\BGME.BattleThemes\BGME.BattleThemes.Config\BGME.BattleThemes.Config.csproj" />
+  </ItemGroup>
+
+<ItemGroup>
+	<Content Include="battle-themes\options\**">
+		<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	</Content>
+</ItemGroup>
 
 </Project>
